# webserver

./: CMakeLists.txt  README.md  main.cpp
servers/header/: epoller.hpp  eventhandler.hpp  kqueuepoller.hpp  simplepoller.hpp  simpleserver.hpp  testserver.hpp  threadpool.hpp  webserver.hpp
servers/src/: epoller.cpp  eventhandler.cpp  kqueuepoller.cpp  simplepoller.cpp  simpleserver.cpp  testserver.cpp  threadpool.cpp  webserver.cpp
sockets/header/: bindingsocket.hpp  connectingsocket.hpp  listeningsocket.hpp  simplesocket.hpp
sockets/src/: bindingsocket.cpp  connectingsocket.cpp  listeningsocket.cpp  simplesocket.cpp
web/header/: simpleweb.hpp
web/src/: simpleweb.cpp
webcontent/: 404.html
